--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,6 @@ version: '3'
 services:
   app:
     image: jarrettcameron/inspire:latest
+    restart: unless-stopped
     ports:
       - "7048:80"
